<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <!-- Main Content View -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/loginDarkBlue">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/lifeLineLoginTitle"
            android:textSize="40sp"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:layout_margin="20dp" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/image_lifeline_logo"
            android:id="@+id/lifeLineLogo"
            android:layout_below="@+id/lifeLineLoginTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/shape_light_blue_background"
            android:id="@+id/loginLightBlueBg"
            android:layout_below="@+id/lifeLineLogo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/shape_white_rounded_background"
            android:id="@+id/loginWhiteBg"
            android:layout_below="@+id/lifeLineLogo"
            android:layout_margin="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEmail"
            android:text="@string/login_email"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_alignTop="@+id/loginWhiteBg"
            android:layout_alignLeft="@+id/loginWhiteBg"
            android:layout_margin="15dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEmail"
            android:text="@string/login_email_hint"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_alignTop="@+id/loginWhiteBg"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textViewPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPassword"
            android:text="@string/login_password"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignLeft="@+id/loginWhiteBg" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:text="@string/login_password_hint"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textViewPassword"
            android:layout_below="@+id/editTextEmail" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:text="@string/login_button"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:background="@color/green"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/loginWhiteBg" />


    </RelativeLayout>
    <!-- /Main Content View -->
    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>
